# caboose

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  roundhouse-20260310-171354-what-s-something-missing-from-.md  roundhouse-20260310-174112-how-can-i-improve-my-readme-.md
.githooks/: pre-commit
.github/workflows/: ci.yml  publish-winget.yml  release.yml  upload-r2.yml
chocolatey/: caboose.nuspec
chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
core/: Cargo.toml
core/src/: attachment.rs  background.rs  checkpoint.rs  events.rs  lib.rs  search_setup.rs
core/src/agent/: cold_storage.rs  conversation.rs  mod.rs  permission.rs  tools.rs
core/src/circuits/: mod.rs  types.rs
core/src/config/: auth.rs  mod.rs  schema.rs
core/src/hooks/: lifecycle.rs  mod.rs
core/src/init/: handler.rs  scanner.rs
core/src/mcp/: manager.rs  presets.rs
core/src/memory/: mod.rs  search.rs  store.rs
core/src/migrate/: agent_import.rs  codex.rs  converter.rs  detection.rs  mod.rs  open_code.rs
core/src/provider/: catalog.rs  error.rs  mod.rs  pricing.rs
core/src/provider/anthropic/: mod.rs  sse.rs  types.rs
core/src/provider/gemini/: mod.rs  sse.rs
core/src/provider/openai/: mod.rs  sse.rs  types.rs
core/src/provider/openrouter/: mod.rs
core/src/roundhouse/: mod.rs
core/src/safety/: command_policy.rs  env_filter.rs
core/src/scm/: tools.rs
core/src/session/: mod.rs  storage.rs
core/src/skills/: awareness.rs  builtins.rs  creation.rs  expand.rs  handoff.rs  hints.rs  loader.rs  types.rs
core/src/sub_agent/: executor.rs  mod.rs  worktree.rs
core/src/suggest/: config.rs  digest.rs  parsers.rs  scanner.rs
core/src/tools/: executable.rs  fetch.rs  glob.rs  grep.rs  mod.rs  patch.rs  read.rs  search.rs  search_searxng.rs  search_tavily.rs  shell.rs  web_search.rs  write.rs
docs/: 0-4-0.md  2026-03-16-image-screenshot-support-design.md  2026-03-20-dev-status.md  competitive-gaps.md
docs/plans/: 2026-03-17-suggest-command.md
docs/specs/: 2026-03-17-suggest-command-design.md
docs/superpowers/plans/: 2026-03-16-image-screenshot-support.md  2026-03-17-roundhouse-v2.md  2026-03-20-app-module-split.md  2026-03-20-core-extraction.md  2026-03-20-v0.7.1-implementation.md  2026-03-21-v0.7.2-implementation.md
docs/superpowers/specs/: 2026-03-15-session-pins-design.md  2026-03-17-roundhouse-v2-design.md  2026-03-20-app-module-split-design.md  2026-03-20-v0.7-architecture-design.md  2026-03-20-v0.7.1-server-agents-search-design.md  2026-03-21-v0.7.2-bg-agents-search-setup-design.md
install/: install.ps1  install.sh
server/: Cargo.toml
server/relay/: README.md  wrangler.toml
server/relay/src/: index.js
server/src/: bridge.rs  lib.rs  main.rs  mdns.rs  push.rs  state.rs
server/src/auth/: devices.rs  mod.rs  pairing.rs
server/src/shell/: manager.rs
server/src/ws/: envelope.rs  mod.rs  session.rs
tui/: Cargo.toml
tui/src/: app.rs  attachment.rs  checkpoint.rs  clipboard.rs  conflict_test_callers.rs  conflict_test_playground.rs  main.rs  update.rs
tui/src/agent/: cold_storage.rs  compaction.rs  conversation.rs  mod.rs  permission.rs  tools.rs
tui/src/agents/: mod.rs
tui/src/app/: dialogs.rs  handoff.rs  helpers.rs  input.rs  key_dispatch.rs  mod.rs  pickers.rs  provider_mgmt.rs  roundhouse.rs  session_mgmt.rs  skills.rs  slash_commands.rs  state.rs  tool_handlers.rs  types.rs
tui/src/circuits/: daemon.rs  ipc.rs  mod.rs  runner.rs  storage.rs  types.rs
tui/src/config/: keys.rs  mod.rs  prefs.rs  schema.rs
tui/src/hooks/: diagnostics.rs  lifecycle.rs  mod.rs
tui/src/init/: mod.rs
tui/src/lsp/: client.rs  detection.rs  mod.rs  types.rs
tui/src/mcp/: manager.rs  mod.rs  presets.rs
tui/src/memory/: extraction.rs  observations.rs  search.rs  store.rs
tui/src/migrate/: claude_code.rs  codex.rs  converter.rs  detection.rs  mod.rs  open_code.rs
tui/src/provider/: catalog.rs  local.rs  mod.rs  models_dev.rs  pricing.rs  retry.rs
tui/src/provider/anthropic/: cache.rs  mod.rs  sse.rs  types.rs
tui/src/provider/gemini/: mod.rs  types.rs
tui/src/provider/openai/: mod.rs  sse.rs  types.rs
tui/src/provider/openrouter/: mod.rs  sse.rs  types.rs
tui/src/roundhouse/: mod.rs  output.rs  planner.rs  session.rs  types.rs
tui/src/safety/: env_filter.rs  mod.rs
tui/src/scm/: detection.rs  mod.rs  tools.rs  watcher.rs
tui/src/session/: export.rs  mod.rs  snapshot.rs  storage.rs
tui/src/skills/: builtins.rs  creation.rs  handoff.rs  loader.rs  mod.rs  resolver.rs  types.rs
tui/src/sub_agent/: conflict.rs  executor.rs  mod.rs  pipeline.rs  worktree.rs
tui/src/suggest/: config.rs  digest.rs  mod.rs  parsers.rs  priority.rs  scanner.rs
tui/src/terminal/: colors.rs  input.rs  mod.rs  panel.rs  widget.rs
tui/src/tools/: diagnostics.rs  executable.rs  fetch.rs  glob.rs  grep.rs  lsp.rs  mod.rs  names.rs  patch.rs  read.rs  recall.rs  shell.rs  web_search.rs  write.rs
tui/src/tui/: approval.rs  ask_user.rs  chat.rs  command.rs  command_palette.rs  dialog.rs  file_auto.rs  file_browser.rs  footer.rs  header.rs  highlight.rs  home.rs  input.rs  input_buffer.rs  input_history.rs  key_input.rs  layout.rs  mcp_input.rs  mod.rs  model_picker.rs  provider_picker.rs  roundhouse_picker.rs  roundhouse_screen.rs  session_picker.rs  sidebar.rs  slash_auto.rs  theme.rs  workspace_add.rs  workspace_list.rs
tui/src/tui/tools/: bash.rs  fetch.rs  generic.rs  glob.rs  grep.rs  mcp.rs  mod.rs  read.rs  skill.rs  todo.rs  write.rs
