[package]
name = "caboose-server"
version = "0.7.2"
edition = "2024"

[dependencies]
caboose-core = { path = "../core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
argon2 = "0.5"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
anyhow = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.26"
tempfile = "3"
