[package]
name = "caboose"
version = "0.2.0"
edition = "2024"
description = "A terminal-native AI coding agent built in Rust"
repository = "https://github.com/kahanscious/caboose"
homepage = "https://trycaboose.dev"

[[bin]]
name = "caboose"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Embedded terminal
portable-pty = "0.8"
vt100 = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP + streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

# Clipboard
arboard = "3"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
ignore = "0.4"
regex = "1"
sha2 = "0.10"
base64 = "0.22"
flate2 = "1"
xz2 = "0.1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# MCP
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }

# LSP
lsp-types = "0.97"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
