[package]
name = "caboose"
version = "0.7.0"
edition = "2024"
description = "A terminal-native AI coding agent built in Rust"
repository = "https://github.com/kahanscious/caboose"
homepage = "https://trycaboose.dev"

[[bin]]
name = "caboose"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Embedded terminal
portable-pty = "0.8"
vt100 = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP + streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
dirs = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# Clipboard
arboard = "3"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
ignore = "0.4"
sha2 = "0.10"
base64 = "0.22"
xz2 = "0.1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Syntax highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# MCP
rmcp = { version = "0.16", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# LSP
lsp-types = "0.97"

# Workspace
caboose-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"

